# lothalproc

./: CMakeLists.txt  README.md  build.sh  buildFlag.mk  config.sh  run.sh
include/: R2Event.hpp  R2Lothal.hpp  R2Types.hpp
src/: DataProvider.hpp  DataProviderAlsa.cpp  DataProviderAlsa.hpp  DataProviderFile.cpp  DataProviderFile.hpp  DataProviderMic.cpp  DataProviderMic.hpp  DataProviderSocket.cpp  DataProviderSocket.hpp  LothalProc.cpp  LothalProc.hpp  R2Client.hpp  R2EventExecutor.cpp  R2EventExecutor.hpp  R2Flora.cpp  R2Flora.hpp  R2FloraEventHandler.cpp  R2FloraEventHandler.hpp  R2ProcServer.cpp  R2ProcServer.hpp  R2RPCServer.cpp  R2RPCServer.hpp  R2Speech.cpp  R2Speech.hpp  R2SpeechEventHandler.cpp  R2SpeechEventHandler.hpp  R2Stream.cpp  R2Stream.hpp  R2SystemEventHander.cpp  R2SystemEventHander.hpp  main.cpp
